# madlib-cli

./: README.md  pyproject.toml
assets/: 0.09063476464619835.txt
madlib_cli/: madlib_cli.py
tests/: test_madlib.py
