[tool.poetry]
name = "madlib-cli"
version = "0.1.0"
description = ""
authors = ["ManarAbdelkarim <manarbdelkarim434@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
requires = "^0.9.0"
ipython-genutils = "0.2.0"
traitlets = "5.0.5"
jupyterlab = "^3.0.14"
black = "^21.4b2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.4b2", allow-prereleases = true}
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
